--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -640,6 +640,7 @@ h2 {
         position: relative;
         height: 50%;
         padding-top: 30px;
+    }
 }
 
 /* for small screens size from 425px wide and down */
