--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -334,6 +334,10 @@ body h4,h5,h6 {
     height: 73vh;
 }
 
+.center-form.contact-items {
+    background-color: hsl(0, 0%, 97%);
+}
+
 .email {
     width: 85%;
 }
