--- a/templates/bookaclass.html
+++ b/templates/bookaclass.html
@@ -1,160 +1,68 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GinTopia | Cocktail Making Class</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <!-- Bootstrap CDN Links -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- Font Awesome Icon Library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Google Fonts -->
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Birthstone&display=swap');
-      @import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
-      @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
-    </style>
-</head>
-<body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">GinTopia</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+{% extends "base.html" %}
+{% block content %}
+  <!-- Meet Your Bartenders -->
+  <section>
+    <div id="bartender-heading">
+      <h3>Meet Your Bartenders</h3>
+      <p>These lovely bartenders, have a combined experience of 34 years, delivering fantastically-made cocktails, but most of all, specialising in gin-cocktails.<br>When you book a class with us, you will be taught by one of these bartenders and learn so much from their years of experience.</p>
+    </div>
+    <hr>
+  </section>
+  <section class="bartender-intro">
+    <br>
+    <div class="container">
+      <div class="row">
+        <div class="bartenders">
+          <span><img class="circle" src="assets/images/bartender-1.png" alt="bartender 1"><br><p class="bartender-info">Jamie, 27<br>5 years of experience<br>Favourite gin cocktail:<br>Blackberry Gin</p></span>
+          <span><img class="circle" src="assets/images/bartender-2.png" alt="bartender 2"><br><p class="bartender-info">Sarah, 29<br>4 years of experience<br>Favourite gin cocktail:<br>Gimlet Gin</p></span>
+          <span><img class="circle" src="assets/images/bartender-3.png" alt="bartender 3"><br><p class="bartender-info">José, 33<br>10 years of experience<br>Favourite gin cocktail:<br>Gin Fizz</p></span>
+          <span><img class="circle" src="assets/images/bartender-4.png" alt="bartender 4"><br><p class="bartender-info">Laurel, 30<br>6 years of experience<br>Favourite gin cocktail:<br>Classic Gin Martini</p></span>
+          <span><img class="circle" src="assets/images/bartender-5.png" alt="bartender 5"><br><p class="bartender-info">Lawrence, 31<br>5 years of experience<br>Favourite gin cocktail:<br>Gin Sling</p></span>
+          <span><img class="circle" src="assets/images/bartender-6.png" alt="bartender 6"><br><p class="bartender-info">Tolu, 28<br>4 years of experience<br>Favourite gin cocktail:<br>Tom Collins</p></span>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="bartender-slideshow">
+    <div id="carouselBartenderIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+          <button type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/images/bar-1.png" class="d-block w-100" alt="Jamie">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/bar-2.png" class="d-block w-100" alt="Sarah">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/bar-3.png" class="d-block w-100" alt="José">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/bar-4.png" class="d-block w-100" alt="Laurel">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/bar-5.png" class="d-block w-100" alt="Lawrence">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/bar-6.png" class="d-block w-100" alt="Tolu">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="allaboutgin.html">All About GIn</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="bookaclass.html">Book a Class</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contactus.html">Contact Us</a>
-            </li>
-          </ul>
-          <a class="nav-link sign-up" href="signup.html">Sign In / Sign Up</a>
-        </div>
-      </div>
-    </nav>
-    <!-- /.navbar -->
-    <hr>
-    <!-- Meet Your Bartenders -->
-    <section>
-      <div id="bartender-heading">
-        <h3>Meet Your Bartenders</h3>
-        <p>These lovely bartenders, have a combined experience of 34 years, delivering fantastically-made cocktails, but most of all, specialising in gin-cocktails.<br>When you book a class with us, you will be taught by one of these bartenders and learn so much from their years of experience.</p>
-      </div>
-      <hr>
-    </section>
-    <section class="bartender-intro">
-      <br>
-      <div class="container">
-        <div class="row">
-          <div class="bartenders">
-            <span><img class="circle" src="assets/images/bartender-1.png" alt="bartender 1"><br><p class="bartender-info">Jamie, 27<br>5 years of experience<br>Favourite gin cocktail:<br>Blackberry Gin</p></span>
-            <span><img class="circle" src="assets/images/bartender-2.png" alt="bartender 2"><br><p class="bartender-info">Sarah, 29<br>4 years of experience<br>Favourite gin cocktail:<br>Gimlet Gin</p></span>
-            <span><img class="circle" src="assets/images/bartender-3.png" alt="bartender 3"><br><p class="bartender-info">José, 33<br>10 years of experience<br>Favourite gin cocktail:<br>Gin Fizz</p></span>
-            <span><img class="circle" src="assets/images/bartender-4.png" alt="bartender 4"><br><p class="bartender-info">Laurel, 30<br>6 years of experience<br>Favourite gin cocktail:<br>Classic Gin Martini</p></span>
-            <span><img class="circle" src="assets/images/bartender-5.png" alt="bartender 5"><br><p class="bartender-info">Lawrence, 31<br>5 years of experience<br>Favourite gin cocktail:<br>Gin Sling</p></span>
-            <span><img class="circle" src="assets/images/bartender-6.png" alt="bartender 6"><br><p class="bartender-info">Tolu, 28<br>4 years of experience<br>Favourite gin cocktail:<br>Tom Collins</p></span>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="bartender-slideshow">
-      <div id="carouselBartenderIndicators" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-            <button type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-            <button type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="assets/images/bar-1.png" class="d-block w-100" alt="Jamie">
-            </div>
-            <div class="carousel-item">
-              <img src="assets/images/bar-2.png" class="d-block w-100" alt="Sarah">
-            </div>
-            <div class="carousel-item">
-              <img src="assets/images/bar-3.png" class="d-block w-100" alt="José">
-            </div>
-            <div class="carousel-item">
-              <img src="assets/images/bar-4.png" class="d-block w-100" alt="Laurel">
-            </div>
-            <div class="carousel-item">
-              <img src="assets/images/bar-5.png" class="d-block w-100" alt="Lawrence">
-            </div>
-            <div class="carousel-item">
-              <img src="assets/images/bar-6.png" class="d-block w-100" alt="Tolu">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-      </div>
-    </section>
-    <!-- /.meet your bartenders -->
-    <hr>
-    <!-- Calendly inline widget begin -->
-    <div class="calendly-inline-widget" data-url="https://calendly.com/gintopia/gin-cocktail-making-class?primary_color=967950" style="min-width:300px;height:630px;"></div>
-    <!-- Calendly inline widget end -->
-    <hr>
-    <!-- Footer -->
-    <section>
-      <footer class="text-center text-white" style="background-color: #d3b488;">
-        <!-- Social links grid container -->
-        <div class="container p-4 pb-0">
-          <!-- Facebook -->
-          <a class="btn btn-outline-light btn-floating m-1" href="http://www.facebook.com" target="_blank" role="button"
-          ><i class="fab fa-facebook-f"></i></a>
-          <!-- Twitter -->
-          <a class="btn btn-outline-light btn-floating m-1" href="http://www.twitter.com" target="_blank" role="button"
-          ><i class="fab fa-twitter"></i></a>
-          <!-- Instagram -->
-          <a class="btn btn-outline-light btn-floating m-1" href="http://www.instagram.com" target="_blank" role="button"
-          ><i class="fab fa-instagram"></i></a>
-        </div>
-        <!-- /.social links grid container -->
-        <hr>
-        <!-- Section: CTA -->
-        <section class="">
-          <p class="d-flex justify-content-center align-items-center">
-            <span class="me-3">Book a class with us!</span>
-            <a class="btn btn-light" href="bookaclass.html">Book Now</a>
-          </p>
-        </section>
-        <!-- ./section: CTA -->
-        </div>
-        <!-- /.grid container -->
-        <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: #967950;">
-          © 2021 Copyright:
-          <a class="text-white" href="https://gintopia.com/">GinTopia.com</a>
-        </div>
-        <!-- /.copyright -->
-      </footer>
-    </section>
-    <!-- /.footer -->
-    <!-- font awesome script -->
-    <script src="https://kit.fontawesome.com/eaf248fb94.js" crossorigin="anonymous"></script>
-    <!-- Bootstrap Bundles -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-</body>
-</html>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+  </section>
+  <!-- /.meet your bartenders -->
+  <hr>
+{% endblock %}
