adjust flask notations on certain href links so correct styling pulls through

--- a/templates/bookaclass.html
+++ b/templates/bookaclass.html
@@ -13,12 +13,12 @@
     <div class="container">
       <div class="row">
         <div class="bartenders">
-          <span><img class="circle" src="assets/images/bartender-1.png" alt="bartender 1"><br><p class="bartender-info">Jamie, 27<br>5 years of experience<br>Favourite gin cocktail:<br>Blackberry Gin</p></span>
-          <span><img class="circle" src="assets/images/bartender-2.png" alt="bartender 2"><br><p class="bartender-info">Sarah, 29<br>4 years of experience<br>Favourite gin cocktail:<br>Gimlet Gin</p></span>
-          <span><img class="circle" src="assets/images/bartender-3.png" alt="bartender 3"><br><p class="bartender-info">José, 33<br>10 years of experience<br>Favourite gin cocktail:<br>Gin Fizz</p></span>
-          <span><img class="circle" src="assets/images/bartender-4.png" alt="bartender 4"><br><p class="bartender-info">Laurel, 30<br>6 years of experience<br>Favourite gin cocktail:<br>Classic Gin Martini</p></span>
-          <span><img class="circle" src="assets/images/bartender-5.png" alt="bartender 5"><br><p class="bartender-info">Lawrence, 31<br>5 years of experience<br>Favourite gin cocktail:<br>Gin Sling</p></span>
-          <span><img class="circle" src="assets/images/bartender-6.png" alt="bartender 6"><br><p class="bartender-info">Tolu, 28<br>4 years of experience<br>Favourite gin cocktail:<br>Tom Collins</p></span>
+          <span><img class="circle" src="static/images/bartender-1.png" alt="bartender 1"><br><p class="bartender-info">Jamie, 27<br>5 years of experience<br>Favourite gin cocktail:<br>Blackberry Gin</p></span>
+          <span><img class="circle" src="static/images/bartender-2.png" alt="bartender 2"><br><p class="bartender-info">Sarah, 29<br>4 years of experience<br>Favourite gin cocktail:<br>Gimlet Gin</p></span>
+          <span><img class="circle" src="static/images/bartender-3.png" alt="bartender 3"><br><p class="bartender-info">José, 33<br>10 years of experience<br>Favourite gin cocktail:<br>Gin Fizz</p></span>
+          <span><img class="circle" src="static/images/bartender-4.png" alt="bartender 4"><br><p class="bartender-info">Laurel, 30<br>6 years of experience<br>Favourite gin cocktail:<br>Classic Gin Martini</p></span>
+          <span><img class="circle" src="static/images/bartender-5.png" alt="bartender 5"><br><p class="bartender-info">Lawrence, 31<br>5 years of experience<br>Favourite gin cocktail:<br>Gin Sling</p></span>
+          <span><img class="circle" src="static/images/bartender-6.png" alt="bartender 6"><br><p class="bartender-info">Tolu, 28<br>4 years of experience<br>Favourite gin cocktail:<br>Tom Collins</p></span>
         </div>
       </div>
     </div>
@@ -35,22 +35,22 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="assets/images/bar-1.png" class="d-block w-100" alt="Jamie">
+            <img src="static/images/bar-1.png" class="d-block w-100" alt="Jamie">
           </div>
           <div class="carousel-item">
-            <img src="assets/images/bar-2.png" class="d-block w-100" alt="Sarah">
+            <img src="static/images/bar-2.png" class="d-block w-100" alt="Sarah">
           </div>
           <div class="carousel-item">
-            <img src="assets/images/bar-3.png" class="d-block w-100" alt="José">
+            <img src="static/images/bar-3.png" class="d-block w-100" alt="José">
           </div>
           <div class="carousel-item">
-            <img src="assets/images/bar-4.png" class="d-block w-100" alt="Laurel">
+            <img src="static/images/bar-4.png" class="d-block w-100" alt="Laurel">
           </div>
           <div class="carousel-item">
-            <img src="assets/images/bar-5.png" class="d-block w-100" alt="Lawrence">
+            <img src="static/images/bar-5.png" class="d-block w-100" alt="Lawrence">
           </div>
           <div class="carousel-item">
-            <img src="assets/images/bar-6.png" class="d-block w-100" alt="Tolu">
+            <img src="static/images/bar-6.png" class="d-block w-100" alt="Tolu">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselBartenderIndicators" data-bs-slide="prev">
