--- a/templates/base.html
+++ b/templates/base.html
@@ -5,16 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GinTopia | Cocktail Making Class</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='}assets/css/style.css')}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <!-- Bootstrap CDN Links -->
-  <link href="{{ url_for('static', filename='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css') }}" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="{{ url_for('static', filename='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css') }}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
   <!-- Font Awesome Icon Library -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css') }}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Emailjs -->
   <script type="text/javascript"
-    src="{{ url_for('static', filename='https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js') }}">
+    src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js">
   </script>
   <script type="text/javascript">
   (function(){
@@ -23,7 +23,7 @@
   </script>
   <!-- JQuery -->
   <script
-    src="{{ url_for('static', filename='https://code.jquery.com/jquery-3.6.0.js') }}"
+    src="https://code.jquery.com/jquery-3.6.0.js"
     integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous">
   </script>
@@ -39,10 +39,10 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a>
+              <a class="nav-link" href="{{ url_for('index') }}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('allaboutgin') }}">All About GIn</a>
+              <a class="nav-link" href="{{ url_for('allaboutgin') }}">All About Gin</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('bookaclass') }}">Book a Class</a>
@@ -86,35 +86,35 @@
         <section class="">
           <p class="d-flex justify-content-center align-items-center">
             <span class="me-3">Book a class with us!</span>
-            <a class="btn btn-light" href="bookaclass.html">Book Now</a>
+            <a class="btn btn-light" href="{{ url_for('bookaclass') }}">Book Now</a>
           </p>
         </section>
         <!-- ./section: CTA -->
         </div>
         <!-- /.grid container -->
         <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: #967950;">© 2021 Copyright: <span id="copyright"></span>
-          <a class="text-white" href="https://gintopia.com/">GinTopia.com</a>
+        <div class="text-center p-3" style="background-color: #967950;">© Copyright: <span id="copyright"></span>
+          <a class="text-white" href="{{ url_for('index') }}">GinTopia.com</a>
         </div>
         <!-- /.copyright -->
       </footer>
     </section>
     <!-- /.footer -->
-    <!-- Bootstrap core JavaScript -->
-    <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
-    <!-- font awesome script -->
-    <script src="{{ url_for('static', filename='https://kit.fontawesome.com/eaf248fb94.js') }}" crossorigin="anonymous"></script>
     <!-- Bootstrap Bundles -->
-    <script src="{{ url_for('static', filename='https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js') }}" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="{{ url_for('static', filename='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js') }}" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- font awesome script -->
+    <script src="https://kit.fontawesome.com/eaf248fb94.js" crossorigin="anonymous"></script>
     <!-- Owl Carousel JS -->
-    <script src="{{ url_for('static', filename='assets/js/owlCarousel.js') }}"></script>
-    <script src="{{ url_for('static', filename='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.js') }}"></script>
+    <script src="static/js/owlCarousel.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.js"></script>
     <!-- MDB CDN -->
-    <script type="text/javascript" src="{{ url_for('static', filename='https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.1/mdb.min.js') }}"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.1/mdb.min.js"></script>
     <!-- Custom JS Script -->
-    <script src="{{ url_for('static', filename='assets/js/signUp.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/signUp.js') }}"></script>
     <script>
       $("#copyright").text(new Date().getFullYear());
     </script>
