--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                 <p class="lead card-text">Learn how to make your favourite<br>gin-based drinks with us!*
                     <span class="d-inline d-sm-none"><br></span>
                     <br>
-                <a href="bookaclass.html" class="cta-btn btn btn-light stretched-link">Book Now</a>
+                <a href="{{ url_for('bookaclass') }}" class="cta-btn btn btn-light stretched-link">Book Now</a>
                 <p class="disclaimer"><small>*You must be at least 18 years old<br>to book a class with us.</small></p>
             </section>
         </div>
@@ -27,7 +27,7 @@
     <div class="owl-carousel owl-theme mt-2">
       <div class="owl-item">
           <div class="card">
-              <div class="img-card"> <img src="assets/images/cust-a.jpg" alt="Marie"> </div>
+              <div class="img-card"> <img src="static/images/cust-a.jpg" alt="Marie"> </div>
               <div class="testimonial mt-4 mb-2"> "I hosted a dinner party and used some of the great techniques that I learnt from this class and my guests loved the gin cocktails! They said it was better than the drinks they get from their local pub." </div>
               <div>
                 <span class="fa fa-star checked"></span>
@@ -41,7 +41,7 @@
       </div>
       <div class="owl-item">
           <div class="card">
-              <div class="img-card"> <img src="assets/images/cust-f.jpg" alt="Darshan"> </div>
+              <div class="img-card"> <img src="static/images/cust-f.jpg" alt="Darshan"> </div>
               <div class="testimonial mt-4 mb-2"> "I usually drink the classic Gin & Tonic with Hendricks gin and Elderflower tonic water, but in this class I discovered Sloe Gin, and that drink is an absolute game changer. I will be making this more at home and ordering it on a night out!" </div>
               <div>
                 <span class="fa fa-star checked"></span>
@@ -54,7 +54,7 @@
       </div>
       <div class="owl-item">
           <div class="card">
-              <div class="img-card"> <img src="assets/images/cust-g.jpg" alt="Sam"> </div>
+              <div class="img-card"> <img src="static/images/cust-g.jpg" alt="Sam"> </div>
               <div class="testimonial mt-4 mb-2"> "I love entertaining guests and I work part time at my local bar. This class gave me the confidence I needed to make drinks that I know my guests will love but also how to impress customers who come to my bar by making off menu cocktails." </div>
               <div>
                 <span class="fa fa-star checked"></span>
@@ -68,7 +68,7 @@
       </div>
       <div class="owl-item">
           <div class="card">
-              <div class="img-card"> <img src="assets/images/cust-h.jpg" alt="Lindsey"> </div>
+              <div class="img-card"> <img src="static/images/cust-h.jpg" alt="Lindsey"> </div>
               <div class="testimonial mt-4 mb-2"> "Me and my girls went to this class and we had sooo much fun! It was entertaining, a lot of laughter and our bartender José was just amazing! I will never forget this day" </div>
               <div>
                 <span class="fa fa-star checked"></span>
@@ -82,7 +82,7 @@
       </div>
       <div class="owl-item">
           <div class="card">
-              <div class="img-card"> <img src="assets/images/cust-j.jpg" alt="Rebecca"> </div>
+              <div class="img-card"> <img src="static/images/cust-j.jpg" alt="Rebecca"> </div>
               <div class="testimonial mt-4 mb-2"> "Went here with my boyfriend as a birthday gift, and it was terrific!! Learnt so many ways to make my standard G&Ts a thousand times better. Will come again!" </div>
               <div>
                 <span class="fa fa-star checked"></span>
@@ -96,7 +96,7 @@
       </div>
       <div class="owl-item">
           <div class="card">
-              <div class="img-card"> <img src="assets/images/cust-k.jpg" alt="Jason"> </div>
+              <div class="img-card"> <img src="static/images/cust-k.jpg" alt="Jason"> </div>
               <div class="testimonial mt-4 mb-2"> "It was great that GinTopia were able to hold private bookings, as I was able to take my clients to this class. I might even see a promotion because of how well it went!" </div>
               <div>
                 <span class="fa fa-star checked"></span>
@@ -120,7 +120,7 @@
       <div class="gallery-image-containers w-3 h-2">
         <div class="gallery-items">
           <div class="gin-image">
-            <img src="assets/images/beige-gin-with-toppings.jpg" alt="gin-alcohol">
+            <img src="static/images/beige-gin-with-toppings.jpg" alt="gin-alcohol">
           </div>
         </div>
       </div>
@@ -128,7 +128,7 @@
       <div class="gallery-image-containers w-2 h-2">
         <div class="gallery-items">
           <div class="gin-image">
-            <img src="assets/images/cucumis-green-gin.jpg" alt="gin-alcohol">
+            <img src="static/images/cucumis-green-gin.jpg" alt="gin-alcohol">
           </div>
         </div>
       </div>
@@ -136,7 +136,7 @@
       <div class="gallery-image-containers w-1 h-2">
         <div class="gallery-items">
           <div class="gin-image">
-            <img src="assets/images/gin-shots.jpg" alt="gin-alcohol">
+            <img src="static/images/gin-shots.jpg" alt="gin-alcohol">
           </div>
         </div>
       </div>
@@ -144,7 +144,7 @@
       <div class="gallery-image-containers w-2 h-3">
         <div class="gallery-items">
           <div class="gin-image">
-            <img src="assets/images/gunpowder-irish-gin.jpg" alt="gin-alcohol">
+            <img src="static/images/gunpowder-irish-gin.jpg" alt="gin-alcohol">
           </div>
         </div>
       </div>
@@ -152,7 +152,7 @@
       <div class="gallery-image-containers w-2 h-4">
         <div class="gallery-items">
           <div class="gin-image">
-            <img src="assets/images/pink-gin.jpg" alt="gin-alcohol">
+            <img src="static/images/pink-gin.jpg" alt="gin-alcohol">
           </div>
         </div>
       </div>
@@ -160,7 +160,7 @@
       <div class="gallery-image-containers w-1 h-3">
         <div class="gallery-items">
           <div class="gin-image">
-            <img src="assets/images/pouring-gin.jpg" alt="gin-alcohol">
+            <img src="static/images/pouring-gin.jpg" alt="gin-alcohol">
           </div>
         </div>
       </div>
@@ -168,7 +168,7 @@
       <div class="gallery-image-containers w-1 h-4">
         <div class="gallery-items">
           <div class="gin-image">
-            <img src="assets/images/white-gin-in-tall-glass.jpg" alt="gin-alcohol">
+            <img src="static/images/white-gin-in-tall-glass.jpg" alt="gin-alcohol">
           </div>
         </div>
       </div>
@@ -176,7 +176,7 @@
       <div class="gallery-image-containers w-2 h-1">
         <div class="gallery-items">
           <div class="gin-image">
-            <img src="assets/images/group-of-women-drinking-gin.jpg" alt="gin-alcohol">
+            <img src="static/images/group-of-women-drinking-gin.jpg" alt="gin-alcohol">
           </div>
         </div>
       </div>
@@ -184,7 +184,7 @@
       <div class="gallery-image-containers w-1 h-1">
         <div class="gallery-items">
           <div class="gin-image">
-            <img src="assets/images/yellow-gin.jpg" alt="gin-alcohol">
+            <img src="static/images/yellow-gin.jpg" alt="gin-alcohol">
           </div>
         </div>
       </div>
@@ -206,28 +206,28 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="assets/images/gunpowder-irish-gin.jpg" class="d-block w-100" alt="gunpowder irish gin bottle">
+            <img src="static/images/gunpowder-irish-gin.jpg" class="d-block w-100" alt="gunpowder irish gin bottle">
           </div>
           <div class="carousel-item">
-            <img src="assets/images/beige-gin-with-toppings.jpg" class="d-block w-100" alt="beige-coloured gin drink">
+            <img src="static/images/beige-gin-with-toppings.jpg" class="d-block w-100" alt="beige-coloured gin drink">
           </div>
           <div class="carousel-item">
-            <img src="assets/images/pouring-gin.jpg" class="d-block w-100" alt="bartender pouring an alcoholic beverage into a glass">
+            <img src="static/images/pouring-gin.jpg" class="d-block w-100" alt="bartender pouring an alcoholic beverage into a glass">
           </div>
           <div class="carousel-item">
-            <img src="assets/images/white-gin-in-tall-glass.jpg" class="d-block w-100" alt="white-coloured gin drink">
+            <img src="static/images/white-gin-in-tall-glass.jpg" class="d-block w-100" alt="white-coloured gin drink">
           </div>
           <div class="carousel-item">
-            <img src="assets/images/orange-gin.jpg" class="d-block w-100" alt="orange-coloured gin drink">
+            <img src="static/images/orange-gin.jpg" class="d-block w-100" alt="orange-coloured gin drink">
           </div>
           <div class="carousel-item">
-            <img src="assets/images/gin-shots.jpg" class="d-block w-100" alt="shot of gin">
+            <img src="static/images/gin-shots.jpg" class="d-block w-100" alt="shot of gin">
           </div>
           <div class="carousel-item">
-            <img src="assets/images/group-of-women-drinking-gin.jpg" class="d-block w-100" alt="women drinking gin">
+            <img src="static/images/group-of-women-drinking-gin.jpg" class="d-block w-100" alt="women drinking gin">
           </div>
           <div class="carousel-item">
-            <img src="assets/images/yellow-gin.jpg" class="d-block w-100" alt="yellow-coloured gin drink">
+            <img src="static/images/yellow-gin.jpg" class="d-block w-100" alt="yellow-coloured gin drink">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselGinIndicators" data-bs-slide="prev">
