--- a/templates/base.html
+++ b/templates/base.html
@@ -113,6 +113,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.js"></script>
     <!-- MDB CDN -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.1/mdb.min.js"></script>
+    <!-- Email JS -->
+    <script src="static/js/sendEmail.js"></script>
     <!-- Custom JS Script -->
     <script src="{{ url_for('static', filename='js/signUp.js') }}"></script>
     <script>
