make booking form responsive

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,6 +7,7 @@
         <form class="form-signup" action="#">
           <h1>Create Account</h1>
           <input class="input-signup" type="text" placeholder="Name" required/>
+          <input class="input-signup" type="number" id="age" min="18" max="80" step="1" placeholder="Age" required> 
           <input class="input-signup" type="email" placeholder="Email" required/>
           <input class="input-signup" type="password" placeholder="Password" required/>
           <button class="button-signup">Sign Up</button>
