--- a/templates/bookaclass.html
+++ b/templates/bookaclass.html
@@ -76,6 +76,10 @@
                   <div class="form-btn">
                     <button class="submit-btn">Book Now</button>
                   </div>
+                  <br>
+                  <div>
+                    <p class="text-muted text-center">ID will be checked on arrival to confirm you are 18+</p>
+                  </div>
                 </form>
               </div>
             </div>
@@ -90,7 +94,6 @@
       <h3>Meet Your Bartenders</h3>
       <p>These lovely bartenders, have a combined experience of 34 years, delivering fantastically-made cocktails, but most of all, specialising in gin-cocktails.<br>When you book a class with us, you will be taught by one of these bartenders and learn so much from their years of experience.</p>
     </div>
-    <hr>
   </section>
   <section class="bartender-intro">
     <br>
