--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                 <p class="lead card-text">Learn how to make your favourite<br>gin-based drinks with us!*
                     <span class="d-inline d-sm-none"><br></span>
                     <br>
-                <a href="{{ url_for('bookaclass') }}" class="cta-btn btn btn-light stretched-link">Book Now</a>
+                <a href="{{ url_for('booking_type') }}" class="cta-btn btn btn-light stretched-link">Book Now</a>
                 <p class="disclaimer"><small>*You must be at least 18 years old<br>to book a class with us.</small></p>
             </section>
         </div>
