temporarily remove model and route python files

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -489,6 +489,10 @@ body h4,h5,h6 {
 	text-transform: capitalize;
 }
 
+.container-confirmed {
+    min-height: 100vh;
+}
+
 .bartenders {
     display: grid;
     grid-template-columns: auto auto auto auto auto auto;
