--- a/templates/booking_confirmed.html
+++ b/templates/booking_confirmed.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
   <hr>
-  <section>
+  <section class="container-confirmed">
     <h3>Hello World</h3>
   </section>
 {% endblock %}
