--- a/templates/booking_form.html
+++ b/templates/booking_form.html
@@ -14,7 +14,7 @@
             </div>
             <div class="col-md-6 col-md-offset-1">
               <div class="booking-form">
-                <form>
+                <form method="POST">
                   <div class="row">
                     <div class="col-md-6">
                       <div class="form-group">
@@ -47,7 +47,7 @@
                     <div class="col-md-6">
                       <div class="form-group">
                       <span class="form-label">No. of People</span>
-                          <select class="form-control">
+                          <select class="form-control" required>
                             <option>1 Person</option>
                             <option>2 People</option>
                             <option>3 People</option>
@@ -65,7 +65,7 @@
                     <div class="col-md-6">
                       <div class="form-group">
                         <span class="form-label">Class Time</span>
-                          <select class="form-control">
+                          <select class="form-control" required>
                             <option>13:00</option>
                             <option>15:00</option>
                             <option>17:00</option>
