--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
               <a class="nav-link" href="{{ url_for('allaboutgin') }}">All About Gin</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('booking_type') }}">Book a Class</a>
+              <a class="nav-link" href="{{ url_for('booking_form') }}">Book a Class</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('contactus') }}">Contact Us</a>
@@ -86,7 +86,7 @@
         <section class="">
           <p class="d-flex justify-content-center align-items-center">
             <span class="me-3">Book a class with us!</span>
-            <a class="btn btn-light" href="{{ url_for('booking_type') }}">Book Now</a>
+            <a class="btn btn-light" href="{{ url_for('booking_form') }}">Book Now</a>
           </p>
         </section>
         <!-- ./section: CTA -->
