update urls on html pages with django syntax

--- a/reservation/templates/reservation/booking_form.html
+++ b/reservation/templates/reservation/booking_form.html
@@ -14,7 +14,7 @@
             </div>
             <div class="col-md-6 col-md-offset-1">
               <div class="booking-form">
-                <form id="form" method="POST">
+                <form id="form">
                   <div class="row">
                     <div class="col-md-6">
                       <div class="form-group">
@@ -78,7 +78,7 @@
                     <p class="text-center"><strong>Note: </strong>Classes are 2 hours long and start from 13:00. Last class is at 21:00</p>
                   </div>
                   <div class="form-btn">
-                    <button id="submit" class="submit-btn">Book Now</button>
+                    <button id="submit" class="submit-btn" disabled>Book Now</button>
                     <!-- <button class="submit-btn"><a style="text-decoration: none; color: white;" href="{{ url_for('booking_confirmed') }}">Book Now</a></button> -->
                   </div>
                   <br>
@@ -105,7 +105,7 @@
     <div class="container">
       <div class="row">
         <div class="bartenders">
-          <span><img class="circle" src="static/images/bartender-1.png" alt="bartender 1"><br><p class="bartender-info"><strong>Jamie, 27</strong><br>5 years of experience<br>Favourite gin cocktail:<br>Blackberry Gin</p></span>
+          <span><img class="circle" src="{% static 'images/bartender-1.png' %}" alt="bartender 1"><br><p class="bartender-info"><strong>Jamie, 27</strong><br>5 years of experience<br>Favourite gin cocktail:<br>Blackberry Gin</p></span>
           <span><img class="circle" src="static/images/bartender-2.png" alt="bartender 2"><br><p class="bartender-info"><strong>Sarah, 29</strong><br>4 years of experience<br>Favourite gin cocktail:<br>Gimlet Gin</p></span>
           <span><img class="circle" src="static/images/bartender-3.png" alt="bartender 3"><br><p class="bartender-info"><strong>José, 33</strong><br>10 years of experience<br>Favourite gin cocktail:<br>Gin Fizz</p></span>
           <span><img class="circle" src="static/images/bartender-4.png" alt="bartender 4"><br><p class="bartender-info"><strong>Laurel, 30</strong><br>6 years of experience<br>Favourite gin cocktail:<br>Classic Gin Martini</p></span>
@@ -127,7 +127,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="static/images/bar-1.png" class="d-block w-100" alt="Jamie">
+            <img src="{% static 'images/bar-1.png' %}" class="d-block w-100" alt="Jamie">
           </div>
           <div class="carousel-item">
             <img src="static/images/bar-2.png" class="d-block w-100" alt="Sarah">
