--- a/reservation/templates/reservation/base.html
+++ b/reservation/templates/reservation/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GinTopia | Cocktail Making Class</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <!-- Bootstrap CDN Links -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
@@ -32,26 +34,26 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('index') }}">GinTopia</a>
+        <a class="navbar-brand" href="{% url 'index' %}">GinTopia</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+              <a class="nav-link" href="{% url 'index' %}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('allaboutgin') }}">All About Gin</a>
+              <a class="nav-link" href="{% url 'all_about_gin' %}">All About Gin</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('booking_form') }}">Book a Class</a>
+              <a class="nav-link" href="{% url 'booking_form' %}">Book a Class</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('contactus') }}">Contact Us</a>
+              <a class="nav-link" href="{% url 'contact_us' %}">Contact Us</a>
             </li>
           </ul>
-          <a class="nav-link sign-up" href="{{ url_for('signup') }}">Sign In / Sign Up</a>
+          <a class="nav-link sign-up" href="{% url 'sign_up' %}">Sign In / Sign Up</a>
         </div>
       </div>
     </nav>
@@ -86,7 +88,7 @@
         <section class="">
           <p class="d-flex justify-content-center align-items-center">
             <span class="me-3">Book a class with us!</span>
-            <a class="btn btn-light" href="{{ url_for('booking_form') }}">Book Now</a>
+            <a class="btn btn-light" href="{% url 'booking_form' %}">Book Now</a>
           </p>
         </section>
         <!-- ./section: CTA -->
@@ -94,7 +96,7 @@
         <!-- /.grid container -->
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: #967950;">© Copyright: <span id="copyright"></span>
-          <a class="text-white" href="{{ url_for('index') }}">GinTopia.com</a>
+          <a class="text-white" href="{% url 'index' %}">GinTopia.com</a>
         </div>
         <!-- /.copyright -->
       </footer>
@@ -136,7 +138,7 @@
       }
     </script>
     <!-- Custom JS Script -->
-    <script src="{{ url_for('static', filename='js/signUp.js') }}"></script>
+    <script src="{% static 'js/signUp.js' %}"></script>
     <script>
       $("#copyright").text(new Date().getFullYear());
     </script>
